--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,26 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
-    android:gravity="center"
+    android:layout_margin="@dimen/layout_margin"
     android:orientation="vertical"
-    tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/bt_one"
+    tools:context=".ResultActivity">
+
+    <EditText
+        android:id="@+id/et_resultAct"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="number one" />
+        android:hint="input anything" />
 
     <Button
-        android:id="@+id/bt_two"
+        android:id="@+id/bt_back"
         android:layout_width="match_parent"
-        android:layout_marginBottom="8dp"
         android:layout_height="wrap_content"
-        android:text="number two" />
+        android:text="Back with Data" />
 
 </LinearLayout>
