--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,11 @@
         android:layout_height="wrap_content"
         android:text="number two" />
 
+    <Button
+        android:id="@+id/bt_three"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="number three" />
+
 </LinearLayout>
